<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.reservations.ReservationsFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.hier.ui.reservations.ReservationsViewModel" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <TableLayout
            android:id="@+id/reservations_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white">

            <!-- Table Header -->
            <TableRow android:background="@color/primary_pink">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/col1_header"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/col2_header"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/col3_header"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/col4_header"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</layout>