<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.makeChoice.ChoiceMeetingRoomFragment">

    <ImageView
        android:id="@+id/imageview_place2"
        android:layout_width="109dp"
        android:layout_height="117dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/of_hier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_hier"
        android:text="@string/adres_1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageview_place"
        app:layout_constraintStart_toStartOf="@+id/imageview_place"
        app:layout_constraintTop_toBottomOf="@+id/imageview_place"
        tools:text="Albert Lienartstraat 24/1 \n
9300 Aalst" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_hier"
        android:text="@string/adres_2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageview_place3"
        app:layout_constraintStart_toStartOf="@+id/imageview_place3"
        app:layout_constraintTop_toBottomOf="@+id/imageview_place3"
        tools:text="Zandberg 6 \n 9300 Aalst" />

    <ImageView
        android:id="@+id/imageview_place"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/icon_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_info" />

    <ImageView
        android:id="@+id/imageview_place3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/icon_place"
        app:layout_constraintEnd_toEndOf="@+id/imageview_place"
        app:layout_constraintStart_toStartOf="@+id/imageview_place"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_pink"
        android:text="@string/kies"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary_pink"
        android:text="@string/kies"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="109dp"
        android:layout_height="117dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/klik_hier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_info" />

    <TextView
        android:id="@+id/txv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/font_hier"
        android:text="@string/info_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
