<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.hier.ui.makeChoice.ChoiceViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context=".ui.makeChoice.ChoiceMeetingRoomFragment">



            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="109dp"
                android:layout_height="117dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/klik_hier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txv_info" />

            <ImageView
                android:id="@+id/imageview_place2"
                android:layout_width="109dp"
                android:layout_height="117dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/of_hier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <ImageView
                android:id="@+id/imageview_place"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/icon_place"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txv_info" />

            <ImageView
                android:id="@+id/imageview_place3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/icon_place"
                app:layout_constraintEnd_toEndOf="@+id/imageview_place"
                app:layout_constraintStart_toStartOf="@+id/imageview_place"
                app:layout_constraintTop_toBottomOf="@+id/btnLocOne" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_hier"
                android:text="@string/adres_1"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/imageview_place"
                app:layout_constraintStart_toStartOf="@+id/imageview_place"
                app:layout_constraintTop_toBottomOf="@+id/imageview_place"
                tools:text="Albert Lienartstraat 24/1 \n
9300 Aalst" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_hier"
                android:text="@string/adres_2"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/imageview_place3"
                app:layout_constraintStart_toStartOf="@+id/imageview_place3"
                app:layout_constraintTop_toBottomOf="@+id/imageview_place3"
                tools:text="Zandberg 6 \n 9300 Aalst" />

            <Button
                android:id="@+id/btnLocOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_pink"
                android:text="@string/kies"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnLocTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/primary_pink"
                android:text="@string/kies"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txv_info"
                style="@style/hier_label"
                android:text="@string/info_choice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_picker" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>